--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "ethers": "^5.7.2",
+    "express": "^4.21.1",
+    "mongoose": "^8.8.0",
     "next": "13.4.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
